# Cofree

./: .git-commit-msg.txt  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GIT_DEPENDENCY_REMOVAL.md  PLAN.md  PROGRESS.md  README.md  bubble_sort.html  index.html  package.json  pnpm-lock.yaml  quick_sort_visualization.html  test-cache-implementation.ts  tsconfig.json  vite.config.ts
.aone_copilot/plans/: Cofree 工具调用与审批流程全面改进.plan.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BUILD.md  CHAT_UI_REDESIGN.md  COMPETITIVE_ANALYSIS.md  CONTEXT_ENGINEERING_PLAN.md  CONTEXT_REFACTOR.md  DEVELOPMENT_GUIDELINES.md  EXPERT_PANEL.md  GIT_SUPPORT.md  GUARDRAILS.md  IMPLEMENTATION_STATUS.md  INDEX.md  MULTI_AGENT_EVOLUTION_PLAN.md  MULTI_AGENT_REMEDIATION_PLAN.md  MVP.md  OPENAI_CACHE_SOLUTION.md  OPENAI_CACHING_ANALYSIS.md  PERFORMANCE_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PRD.md  PROMPT_CACHING.md  REFACTOR_PLAN.md  ROADMAP.md  SECURITY_PRIVACY.md  UI_REFACTOR_PLAN.md
docs/release-notes/: v0.1.5.md  v0.1.6.md
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cofree/: checkpoints.db
src-tauri/.cofree/snapshots/snapshot-1772192390643277000-1/: merge_sort.py  merge_sort_demo.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  secure_store.rs
src-tauri/src/application/: checkpoint.rs  mod.rs  workspace.rs
src-tauri/src/commands/: app.rs  diagnostics.rs  fs.rs  git.rs  grep.rs  http.rs  litellm.rs  mod.rs  patch.rs  secure_store.rs  shell.rs  snapshot.rs  workspace.rs
src-tauri/src/domain/: dto.rs  error.rs  mod.rs
src-tauri/src/infrastructure/: checkpoint_repo.rs  mod.rs  paths.rs
src/agents/: agentTeam.ts  builtinChatAgents.ts  (+9 more)
tests/: agentDomain.test.ts  agentTeam.test.ts  concurrency.test.ts  contextBudget.test.ts  performanceOptimizations.test.ts  settingsStore.test.ts  specializedAgents.test.ts  structuredOutput.test.ts  subAgentFeedback.test.ts  workingMemory.test.ts
(+222 files in other folders)
