[package]
name = "cofree"
version = "0.1.5"
description = "Cofree desktop shell"
authors = ["Cofree Team"]
license = "MIT"
repository = "https://github.com/J-York/Cofree"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = { version = "0.18", features = ["vendored-openssl"] }
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
futures-util = "0.3"
glob = "0.3"
regex = "1"
url = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
ring = "0.17"
zip = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
